# shelfie

./: README.md  pyproject.toml
examples/: basic.py  reading.py
examples/sales_data/north_america/2025/Q2/: sales.csv
src/shelfie/: __init__.py  data.py  fields.py  shelf.py
tests/: test_shelfie.py
